# billie-flow

./: .gitignore  Makefile  README.md
app/: Package.swift
app/BillieFlow.xcodeproj/: project.pbxproj
app/Config/: Info.plist  Shared.xcconfig
configs/: asr_models.json  cleanup_models.json  cleanup_styles.json
contracts/: billie-flow.worker.v1.md  billie-flow.worker.v1.schema.json
contracts/fixtures/: invalid.ndjson  valid.ndjson
docs/: decisions.md  model-matrix.md  native-v0.1-qa.md  native-v0.1.md  native-v0.2.md  report-design-plan.md  swift-app-plan.md  testing-phase-plan.md
docs/screenshots/: README.md
experiments/voice-memo/: manifest.json  results.json  (+1 more)
qa/: system_acceptance.py
reports/: voice-memo.html
scripts/: assemble_results.py  attempt_asr_adapters.py  bootstrap_worker.sh  build_report.py  package_release.sh  probe_hf_audio_model.py  review_results.py  run_cleanup_passes.py  run_gemma_audio_asr.py  run_nemo_parakeet.py  run_system_acceptance.sh  run_voxtral_asr.py  run_worker_acceptance.py  test_swift.sh  test_worker.sh  test_xcode.sh  validate_results.py  validate_worker_contract.py  verify_native_v1.sh
shared/: site-chrome.css  site-header.html  site-version.html
worker/: pyproject.toml
worker/src/billie_flow_worker/: __init__.py  __main__.py  audio.py  corrections.py  fake.py  prefetch.py  prompts.py  protocol.py  runtime.py  service.py  smoke.py  smoke_models.json
worker/tests/: helpers.py  test_audio.py  test_cli.py  test_contract.py  test_corrections.py  test_prefetch.py  test_protocol.py  test_runtime.py  test_service.py
(+18 files in other folders)
